2011-05-04  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Eric Seidel.

        [results.html] bucket crashes/timeouts into their own test lists
        https://bugs.webkit.org/show_bug.cgi?id=60181

        Also, don't show the "expected to fail but passed" table for ports
        that don't use an expectation file.

        * fast/harness/resources/results-test.js:
        * fast/harness/results.html:

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Attempt to resolve flakiness on windows.

        * inspector/elements/shadow-dom.html:

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: expose shadow DOM in the Elements panel
        https://bugs.webkit.org/show_bug.cgi?id=60160

        * http/tests/inspector/elements-test.js:
        (initialize_ElementTest.InspectorTest.nodeWithId.processChildren):
        (initialize_ElementTest.InspectorTest.nodeWithId.documentRequested):
        (initialize_ElementTest.InspectorTest.nodeWithId):
        * inspector/elements/shadow-dom-expected.txt: Added.
        * inspector/elements/shadow-dom.html: Added.

2011-05-04  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Fix crashes in QMetaObject::metacall
        https://bugs.webkit.org/show_bug.cgi?id=53912

        * platform/qt/Skipped: Unskip http/tests/websocket/tests.

2011-05-04  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, skip fast/dom/Geolocation/argument-types.html crashing
        on GTK.

        [GTK] fast/dom/Geolocation/argument-types.html flaky crash on 32-bits Debug
        https://bugs.webkit.org/show_bug.cgi?id=60158

        * platform/gtk/Skipped:

2011-05-04  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        Port Mozilla's IndexedDB tests: readyState
        https://bugs.webkit.org/show_bug.cgi?id=60069

        Checks the value of the request.readyState property during and